improve error handling and better swagger theme
