# src/controllers/wallet/faucet.rs
@@ -1,4 +1,5 @@
 #![allow(clippy::unused_async)]
+use axum::http::StatusCode;
 use loco_rs::prelude::*;
 
 use crate::{
@@ -6,28 +7,26 @@ use crate::{
     views::faucet::FaucetResponse,
 };
 
-use xrpl::wallet::Wallet;
-
-use super::exceptions::WalletException;
+use super::{create_wallet, exceptions::WalletException};
 
 pub async fn generate_faucet_wallet(
     Path(network): Path<Network>,
     State(_ctx): State<AppContext>,
 ) -> Result<Json<FaucetResponse>> {
-    let wallet = match Wallet::create(None) {
-        Ok(wallet) => wallet,
-        Err(_) => return Err(Error::Anyhow(WalletException::FailedToCreateAccount.into())),
-    };
-    let x_address = wallet.get_xaddress(None, true).unwrap();
+    let (wallet, x_address) = create_wallet()?;
     let network_faucet_url = match get_faucet_network_url(network) {
         Ok(url) => url,
-        Err(error) => return Err(Error::wrap(error)),
+        Err(error) => {
+            return Err(Error::CustomError(
+                StatusCode::INTERNAL_SERVER_ERROR,
+                error.into(),
+            ))
+        }
     };
-    let mut funded_response = fund_wallet(network_faucet_url, wallet.classic_address.clone())
-        .await
-        .unwrap();
+    let mut funded_response =
+        fund_wallet(network_faucet_url, wallet.classic_address.clone()).await?;
     if funded_response.account.xaddress.is_none() {
-        funded_response.account.xaddress = Some(x_address.clone());
+        funded_response.account.xaddress = Some(x_address);
     }
     if funded_response.account.secret.is_none() {
         funded_response.account.secret = Some(wallet.seed.clone());
@@ -46,8 +45,19 @@ async fn fund_wallet(network_faucet_url: String, address: String) -> Result<Fauc
     match faucet_result {
         Ok(response) => {
             if response.status().is_success() {
-                let response_text = response.text().await.unwrap();
-                let response_json: FaucetResponse = serde_json::from_str(&response_text).unwrap();
+                let response_text = match response.text().await {
+                    Ok(text) => text,
+                    Err(error) => {
+                        return Err(Error::CustomError(
+                            StatusCode::INTERNAL_SERVER_ERROR,
+                            WalletException::FailedToFundWallet(error).into(),
+                        ))
+                    }
+                };
+                let response_json: FaucetResponse = match serde_json::from_str(&response_text) {
+                    Ok(json) => json,
+                    Err(error) => return Err(Error::JSON(error)),
+                };
                 Ok(response_json)
             } else {
                 Err(Error::Message(format!(
